Fixed invisible footer

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-html,
-body {
+html, body {
   height: 100%;
   width: 100%; }
 
@@ -22,12 +21,7 @@ a {
   a:hover, a:focus {
     color: #007acc; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
 
 p {
